<resources>
    <string name="app_name">爱投</string>
    <string name="title_activity_login">登录</string>

    <string name="app_right">love-vote\nCopyright © 2017 ZXY .All Rights Reserved</string>
    <string name="prompt_user">用户</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up"><![CDATA[立即注册<font color="#F49314">>></font>]]></string>
    <string name="error_invalid_email">用户名错误</string>
    <string name="error_invalid_password">密码无效</string>
    <string name="error_null_password">密码不能为空</string>
    <string name="error_password">请输入八位有效密码</string>
    <string name="error_confirm_password">两次密码不相同</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_login_error">账号或密码错误</string>
    <string name="error_invalid_pickName">用户名不能为空</string>
    <string name="error_account_error">用户已存在</string>
    <string name="success_login">登陆成功</string>
    <string name="success_register">注册成功</string>
    <string name="prompt_register_name">昵称</string>
    <string name="prompt_register_phone">手机号码</string>
    <string name="prompt_register_password">输入密码</string>
    <string name="prompt_register_confirm_password">确认密码</string>
    <string name="action_register">立即注册</string>
    <string name="action_agreement">我已阅读并同意《爱投许可及服务协议》</string>
    <string name="action_my_vote">我的投票</string>
    <string name="action_vote">投票</string>
    <string name="action_my_publish">我的发布</string>
    <string name="error_field_required">用户不能为空</string>
    <string name="prompt_theme">主题：</string>
    <string name="action_add_theme_cover">添加主题封面</string>
    <string name="action_details">详情描述：</string>
    <string name="action_add_vote_options">新建投票选项</string>
    <string name="action_publish">发布</string>
    <string name="error_publish">发布失败</string>
    <string name="success_publish">发布成功</string>
    <string name="action_edit_title">请输入主题</string>
    <string name="action_edit_option">请输入选项</string>
    <string name="action_add_cover">请选择封面</string>
    <string name="action_edit_details">请添加详情描述</string>
    <string name="title_details">详情</string>
    <string name="toast_chose_limit">只能选择一个哦！</string>
    <string name="toast_chose_one">请选择一个选项哦！</string>
    <string name="voted">已投票</string>
    <string name="vote_voted">投票成功</string>
    <string name="toast_exit_tip">再按一次返回退出</string>


    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
