<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="com.sxdtdx.aitou.view.fragment.VoteListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_publish_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_theme"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/option_et_bg"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"/>

                <ImageView
                    android:id="@+id/iv_publish_cover"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:background="@mipmap/icon_add_cover"/>

                <TextView
                    android:id="@+id/tv_add_cover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_publish_cover"
                    android:layout_centerInParent="true"
                    android:text="@string/action_add_theme_cover"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/et_publish_details"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/option_et_bg"
                android:gravity="left|top"
                android:hint="@string/action_details"
                android:padding="5dp"/>

            <com.sxdtdx.aitou.view.SuperListView
                android:id="@+id/rl_publish_candidate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

            <Button
                android:id="@+id/btn_add_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/action_add_vote_options"/>

            <Button
                android:id="@+id/btn_publish"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/action_publish"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
